--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -33,8 +33,8 @@
                 <div class="inline-block mt-3 mr-1">
                   {% include dot-accent.html %}
                 </div>
-                <div class="inline-block mt-3">
-                  {% include github.html %}
+                 <div class="inline-block mt-3 mr-1">
+                  {% include dot-accent.html %}
                 </div>
               </div>
               <!-- Set site description in config.yml -->
@@ -44,9 +44,6 @@
             <div class="col-4 sm-width-full left border-top-thin mt-3 mt-lg-0 ml-lg-4 table">
                 <div class="inline-block mt-3 mr-1">
                   {% include dot.html %}
-                </div>
-                <div class="inline-block mt-3">
-                  {% include {{ site.social_link | default: "twitter" }}.html %}
                 </div>
             </div>
           </div>
